FutureCParser.cpp

// Generated from FutureC.g4 by ANTLR 4.13.1


#include "FutureCListener.h"

#include "FutureCParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct FutureCParserStaticData final {
  FutureCParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  FutureCParserStaticData(const FutureCParserStaticData&) = delete;
  FutureCParserStaticData(FutureCParserStaticData&&) = delete;
  FutureCParserStaticData& operator=(const FutureCParserStaticData&) = delete;
  FutureCParserStaticData& operator=(FutureCParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag futurecParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
FutureCParserStaticData *futurecParserStaticData = nullptr;

void futurecParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (futurecParserStaticData != nullptr) {
    return;
  }
#else
  assert(futurecParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<FutureCParserStaticData>(
    std::vector<std::string>{
      "prog", "statement", "assignment", "expression", "literal", "i128Literal", 
      "u128Literal", "ulongLiteral", "longLiteral", "uintLiteral", "byteLiteral", 
      "ubyteLiteral", "shortLiteral", "ushortLiteral", "intLiteral", "floatLiteral", 
      "doubleLiteral", "charLiteral", "u8CharLiteral", "u32CharLiteral", 
      "stringLiteral", "u8StringLiteral", "u32StringLiteral", "variableDeclaration", 
      "variableDefinition"
    },
    std::vector<std::string>{
      "", "';'", "'='", "'+'", "'i128'", "'u128'", "'UL'", "'u64'", "'L'", 
      "'i64'", "'U'", "'u32'", "'i8'", "'u8'", "'i16'", "'u16'", "'f'", 
      "'{'", "'};'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "AssignmentId", "Declarator", "Type", "Identifier", "DecNumber", 
      "OctNumber", "BinNumber", "HexNumber", "FloatNumber0", "FloatNumber1", 
      "Character", "String", "ESC_SEQ", "WS", "Auto"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  futurecParserStaticData = staticData.release();
}

}

FutureCParser::FutureCParser(TokenStream *input) : FutureCParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

FutureCParser::FutureCParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  FutureCParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *futurecParserStaticData->atn, futurecParserStaticData->decisionToDFA, futurecParserStaticData->sharedContextCache, options);
}

FutureCParser::~FutureCParser() {
  delete _interpreter;
}

const atn::ATN& FutureCParser::getATN() const {
  return *futurecParserStaticData->atn;
}

std::string FutureCParser::getGrammarFileName() const {
  return "FutureC.g4";
}

const std::vector<std::string>& FutureCParser::getRuleNames() const {
  return futurecParserStaticData->ruleNames;
}

const dfa::Vocabulary& FutureCParser::getVocabulary() const {
  return futurecParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView FutureCParser::getSerializedATN() const {
  return futurecParserStaticData->serializedATN;
}


//----------------- ProgContext ------------------------------------------------------------------

FutureCParser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<FutureCParser::StatementContext *> FutureCParser::ProgContext::statement() {
  return getRuleContexts<FutureCParser::StatementContext>();
}

FutureCParser::StatementContext* FutureCParser::ProgContext::statement(size_t i) {
  return getRuleContext<FutureCParser::StatementContext>(i);
}


size_t FutureCParser::ProgContext::getRuleIndex() const {
  return FutureCParser::RuleProg;
}

void FutureCParser::ProgContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FutureCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProg(this);
}

void FutureCParser::ProgContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FutureCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProg(this);
}

FutureCParser::ProgContext* FutureCParser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, FutureCParser::RuleProg);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(51); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(50);
      statement();
      setState(53); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 2140678146) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

FutureCParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

FutureCParser::VariableDefinitionContext* FutureCParser::StatementContext::variableDefinition() {
  return getRuleContext<FutureCParser::VariableDefinitionContext>(0);
}

FutureCParser::VariableDeclarationContext* FutureCParser::StatementContext::variableDeclaration() {
  return getRuleContext<FutureCParser::VariableDeclarationContext>(0);
}

FutureCParser::AssignmentContext* FutureCParser::StatementContext::assignment() {
  return getRuleContext<FutureCParser::AssignmentContext>(0);
}


size_t FutureCParser::StatementContext::getRuleIndex() const {
  return FutureCParser::RuleStatement;
}

void FutureCParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FutureCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void FutureCParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FutureCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}

FutureCParser::StatementContext* FutureCParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, FutureCParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(59);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(55);
      variableDefinition();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(56);
      variableDeclaration();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(57);
      assignment();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(58);
      match(FutureCParser::T__0);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentContext ------------------------------------------------------------------

FutureCParser::AssignmentContext::AssignmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<FutureCParser::ExpressionContext *> FutureCParser::AssignmentContext::expression() {
  return getRuleContexts<FutureCParser::ExpressionContext>();
}

FutureCParser::ExpressionContext* FutureCParser::AssignmentContext::expression(size_t i) {
  return getRuleContext<FutureCParser::ExpressionContext>(i);
}


size_t FutureCParser::AssignmentContext::getRuleIndex() const {
  return FutureCParser::RuleAssignment;
}

void FutureCParser::AssignmentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FutureCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssignment(this);
}

void FutureCParser::AssignmentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FutureCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssignment(this);
}

FutureCParser::AssignmentContext* FutureCParser::assignment() {
  AssignmentContext *_localctx = _tracker.createInstance<AssignmentContext>(_ctx, getState());
  enterRule(_localctx, 4, FutureCParser::RuleAssignment);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(61);
    expression(0);
    setState(62);
    match(FutureCParser::T__1);
    setState(63);
    expression(0);
    setState(64);
    match(FutureCParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

FutureCParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FutureCParser::ExpressionContext::AssignmentId() {
  return getToken(FutureCParser::AssignmentId, 0);
}

FutureCParser::LiteralContext* FutureCParser::ExpressionContext::literal() {
  return getRuleContext<FutureCParser::LiteralContext>(0);
}

std::vector<FutureCParser::ExpressionContext *> FutureCParser::ExpressionContext::expression() {
  return getRuleContexts<FutureCParser::ExpressionContext>();
}

FutureCParser::ExpressionContext* FutureCParser::ExpressionContext::expression(size_t i) {
  return getRuleContext<FutureCParser::ExpressionContext>(i);
}


size_t FutureCParser::ExpressionContext::getRuleIndex() const {
  return FutureCParser::RuleExpression;
}

void FutureCParser::ExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FutureCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpression(this);
}

void FutureCParser::ExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FutureCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpression(this);
}


FutureCParser::ExpressionContext* FutureCParser::expression() {
   return expression(0);
}

FutureCParser::ExpressionContext* FutureCParser::expression(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  FutureCParser::ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, parentState);
  FutureCParser::ExpressionContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 6;
  enterRecursionRule(_localctx, 6, FutureCParser::RuleExpression, precedence);

    

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(69);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case FutureCParser::AssignmentId: {
        setState(67);
        match(FutureCParser::AssignmentId);
        break;
      }

      case FutureCParser::T__10:
      case FutureCParser::T__12:
      case FutureCParser::DecNumber:
      case FutureCParser::OctNumber:
      case FutureCParser::BinNumber:
      case FutureCParser::HexNumber:
      case FutureCParser::FloatNumber0:
      case FutureCParser::FloatNumber1:
      case FutureCParser::Character:
      case FutureCParser::String: {
        setState(68);
        literal();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    _ctx->stop = _input->LT(-1);
    setState(76);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
        pushNewRecursionContext(_localctx, startState, RuleExpression);
        setState(71);

        if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
        setState(72);
        match(FutureCParser::T__2);
        setState(73);
        expression(4); 
      }
      setState(78);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- LiteralContext ------------------------------------------------------------------

FutureCParser::LiteralContext::LiteralContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

FutureCParser::I128LiteralContext* FutureCParser::LiteralContext::i128Literal() {
  return getRuleContext<FutureCParser::I128LiteralContext>(0);
}

FutureCParser::U128LiteralContext* FutureCParser::LiteralContext::u128Literal() {
  return getRuleContext<FutureCParser::U128LiteralContext>(0);
}

FutureCParser::UlongLiteralContext* FutureCParser::LiteralContext::ulongLiteral() {
  return getRuleContext<FutureCParser::UlongLiteralContext>(0);
}

FutureCParser::LongLiteralContext* FutureCParser::LiteralContext::longLiteral() {
  return getRuleContext<FutureCParser::LongLiteralContext>(0);
}

FutureCParser::UintLiteralContext* FutureCParser::LiteralContext::uintLiteral() {
  return getRuleContext<FutureCParser::UintLiteralContext>(0);
}

FutureCParser::ByteLiteralContext* FutureCParser::LiteralContext::byteLiteral() {
  return getRuleContext<FutureCParser::ByteLiteralContext>(0);
}

FutureCParser::UbyteLiteralContext* FutureCParser::LiteralContext::ubyteLiteral() {
  return getRuleContext<FutureCParser::UbyteLiteralContext>(0);
}

FutureCParser::ShortLiteralContext* FutureCParser::LiteralContext::shortLiteral() {
  return getRuleContext<FutureCParser::ShortLiteralContext>(0);
}

FutureCParser::UshortLiteralContext* FutureCParser::LiteralContext::ushortLiteral() {
  return getRuleContext<FutureCParser::UshortLiteralContext>(0);
}

FutureCParser::IntLiteralContext* FutureCParser::LiteralContext::intLiteral() {
  return getRuleContext<FutureCParser::IntLiteralContext>(0);
}

FutureCParser::FloatLiteralContext* FutureCParser::LiteralContext::floatLiteral() {
  return getRuleContext<FutureCParser::FloatLiteralContext>(0);
}

FutureCParser::DoubleLiteralContext* FutureCParser::LiteralContext::doubleLiteral() {
  return getRuleContext<FutureCParser::DoubleLiteralContext>(0);
}

FutureCParser::CharLiteralContext* FutureCParser::LiteralContext::charLiteral() {
  return getRuleContext<FutureCParser::CharLiteralContext>(0);
}

FutureCParser::StringLiteralContext* FutureCParser::LiteralContext::stringLiteral() {
  return getRuleContext<FutureCParser::StringLiteralContext>(0);
}


size_t FutureCParser::LiteralContext::getRuleIndex() const {
  return FutureCParser::RuleLiteral;
}

void FutureCParser::LiteralContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FutureCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLiteral(this);
}

void FutureCParser::LiteralContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FutureCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLiteral(this);
}

FutureCParser::LiteralContext* FutureCParser::literal() {
  LiteralContext *_localctx = _tracker.createInstance<LiteralContext>(_ctx, getState());
  enterRule(_localctx, 8, FutureCParser::RuleLiteral);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(93);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(79);
      i128Literal();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(80);
      u128Literal();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(81);
      ulongLiteral();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(82);
      longLiteral();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(83);
      uintLiteral();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(84);
      byteLiteral();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(85);
      ubyteLiteral();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(86);
      shortLiteral();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(87);
      ushortLiteral();
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(88);
      intLiteral();
      break;
    }

    case 11: {
      enterOuterAlt(_localctx, 11);
      setState(89);
      floatLiteral();
      break;
    }

    case 12: {
      enterOuterAlt(_localctx, 12);
      setState(90);
      doubleLiteral();
      break;
    }

    case 13: {
      enterOuterAlt(_localctx, 13);
      setState(91);
      charLiteral();
      break;
    }

    case 14: {
      enterOuterAlt(_localctx, 14);
      setState(92);
      stringLiteral();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- I128LiteralContext ------------------------------------------------------------------

FutureCParser::I128LiteralContext::I128LiteralContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

FutureCParser::IntLiteralContext* FutureCParser::I128LiteralContext::intLiteral() {
  return getRuleContext<FutureCParser::IntLiteralContext>(0);
}


size_t FutureCParser::I128LiteralContext::getRuleIndex() const {
  return FutureCParser::RuleI128Literal;
}

void FutureCParser::I128LiteralContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FutureCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterI128Literal(this);
}

void FutureCParser::I128LiteralContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FutureCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitI128Literal(this);
}

FutureCParser::I128LiteralContext* FutureCParser::i128Literal() {
  I128LiteralContext *_localctx = _tracker.createInstance<I128LiteralContext>(_ctx, getState());
  enterRule(_localctx, 10, FutureCParser::RuleI128Literal);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(95);
    intLiteral();
    setState(96);
    match(FutureCParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- U128LiteralContext ------------------------------------------------------------------

FutureCParser::U128LiteralContext::U128LiteralContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

FutureCParser::IntLiteralContext* FutureCParser::U128LiteralContext::intLiteral() {
  return getRuleContext<FutureCParser::IntLiteralContext>(0);
}


size_t FutureCParser::U128LiteralContext::getRuleIndex() const {
  return FutureCParser::RuleU128Literal;
}

void FutureCParser::U128LiteralContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FutureCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterU128Literal(this);
}

void FutureCParser::U128LiteralContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FutureCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitU128Literal(this);
}

FutureCParser::U128LiteralContext* FutureCParser::u128Literal() {
  U128LiteralContext *_localctx = _tracker.createInstance<U128LiteralContext>(_ctx, getState());
  enterRule(_localctx, 12, FutureCParser::RuleU128Literal);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(98);
    intLiteral();
    setState(99);
    match(FutureCParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UlongLiteralContext ------------------------------------------------------------------

FutureCParser::UlongLiteralContext::UlongLiteralContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

FutureCParser::IntLiteralContext* FutureCParser::UlongLiteralContext::intLiteral() {
  return getRuleContext<FutureCParser::IntLiteralContext>(0);
}


size_t FutureCParser::UlongLiteralContext::getRuleIndex() const {
  return FutureCParser::RuleUlongLiteral;
}

void FutureCParser::UlongLiteralContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FutureCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUlongLiteral(this);
}

void FutureCParser::UlongLiteralContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FutureCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUlongLiteral(this);
}

FutureCParser::UlongLiteralContext* FutureCParser::ulongLiteral() {
  UlongLiteralContext *_localctx = _tracker.createInstance<UlongLiteralContext>(_ctx, getState());
  enterRule(_localctx, 14, FutureCParser::RuleUlongLiteral);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(107);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(101);
      intLiteral();
      setState(102);
      match(FutureCParser::T__5);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(104);
      intLiteral();
      setState(105);
      match(FutureCParser::T__6);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LongLiteralContext ------------------------------------------------------------------

FutureCParser::LongLiteralContext::LongLiteralContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

FutureCParser::IntLiteralContext* FutureCParser::LongLiteralContext::intLiteral() {
  return getRuleContext<FutureCParser::IntLiteralContext>(0);
}


size_t FutureCParser::LongLiteralContext::getRuleIndex() const {
  return FutureCParser::RuleLongLiteral;
}

void FutureCParser::LongLiteralContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FutureCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLongLiteral(this);
}

void FutureCParser::LongLiteralContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FutureCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLongLiteral(this);
}

FutureCParser::LongLiteralContext* FutureCParser::longLiteral() {
  LongLiteralContext *_localctx = _tracker.createInstance<LongLiteralContext>(_ctx, getState());
  enterRule(_localctx, 16, FutureCParser::RuleLongLiteral);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(115);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(109);
      intLiteral();
      setState(110);
      match(FutureCParser::T__7);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(112);
      intLiteral();
      setState(113);
      match(FutureCParser::T__8);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UintLiteralContext ------------------------------------------------------------------

FutureCParser::UintLiteralContext::UintLiteralContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

FutureCParser::IntLiteralContext* FutureCParser::UintLiteralContext::intLiteral() {
  return getRuleContext<FutureCParser::IntLiteralContext>(0);
}


size_t FutureCParser::UintLiteralContext::getRuleIndex() const {
  return FutureCParser::RuleUintLiteral;
}

void FutureCParser::UintLiteralContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FutureCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUintLiteral(this);
}

void FutureCParser::UintLiteralContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FutureCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUintLiteral(this);
}

FutureCParser::UintLiteralContext* FutureCParser::uintLiteral() {
  UintLiteralContext *_localctx = _tracker.createInstance<UintLiteralContext>(_ctx, getState());
  enterRule(_localctx, 18, FutureCParser::RuleUintLiteral);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(123);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(117);
      intLiteral();
      setState(118);
      match(FutureCParser::T__9);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(120);
      intLiteral();
      setState(121);
      match(FutureCParser::T__10);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ByteLiteralContext ------------------------------------------------------------------

FutureCParser::ByteLiteralContext::ByteLiteralContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

FutureCParser::IntLiteralContext* FutureCParser::ByteLiteralContext::intLiteral() {
  return getRuleContext<FutureCParser::IntLiteralContext>(0);
}


size_t FutureCParser::ByteLiteralContext::getRuleIndex() const {
  return FutureCParser::RuleByteLiteral;
}

void FutureCParser::ByteLiteralContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FutureCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterByteLiteral(this);
}

void FutureCParser::ByteLiteralContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FutureCListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitByteLiteral(this);
}
